--- a/Aula05/ex3.ipynb
+++ b/Aula05/ex3.ipynb
@@ -66,8 +66,8 @@
    "source": [
     "#Dados de treinamento \n",
     "area = np.array([50, 100, 120,300]).reshape(-1,1)\n",
-    "#Quantidade de calor\n",
-    "valor = np.array([180000, 300000, 375000, 600000]) #Nível da temperatura\n",
+    "#Quantidade de valor\n",
+    "valor = np.array([180000, 300000, 375000, 600000]) #Nível da valor\n",
     "#Criar e treinar o modelo de regressão linear\n",
     "modelo = LinearRegression() #Cria uma variavel chamada modelo\n",
     "modelo.fit(area, valor) #Cria o modelo com base nos dados de entrada"
