--- a/Aula16/codigo.ipynb
+++ b/Aula16/codigo.ipynb
@@ -1,5 +1,143 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting scikit-learn\n",
+      "  Downloading scikit_learn-1.5.2-cp313-cp313-win_amd64.whl.metadata (13 kB)\n",
+      "Collecting numpy>=1.19.5 (from scikit-learn)\n",
+      "  Downloading numpy-2.1.3-cp313-cp313-win_amd64.whl.metadata (60 kB)\n",
+      "Collecting scipy>=1.6.0 (from scikit-learn)\n",
+      "  Downloading scipy-1.14.1-cp313-cp313-win_amd64.whl.metadata (60 kB)\n",
+      "Collecting joblib>=1.2.0 (from scikit-learn)\n",
+      "  Downloading joblib-1.4.2-py3-none-any.whl.metadata (5.4 kB)\n",
+      "Collecting threadpoolctl>=3.1.0 (from scikit-learn)\n",
+      "  Downloading threadpoolctl-3.5.0-py3-none-any.whl.metadata (13 kB)\n",
+      "Downloading scikit_learn-1.5.2-cp313-cp313-win_amd64.whl (11.0 MB)\n",
+      "   ---------------------------------------- 0.0/11.0 MB ? eta -:--:--\n",
+      "   ------------------ --------------------- 5.0/11.0 MB 25.4 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 11.0/11.0 MB 27.6 MB/s eta 0:00:00\n",
+      "Downloading joblib-1.4.2-py3-none-any.whl (301 kB)\n",
+      "Downloading numpy-2.1.3-cp313-cp313-win_amd64.whl (12.6 MB)\n",
+      "   ---------------------------------------- 0.0/12.6 MB ? eta -:--:--\n",
+      "   --------------------------- ------------ 8.7/12.6 MB 40.2 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 12.6/12.6 MB 30.6 MB/s eta 0:00:00\n",
+      "Downloading scipy-1.14.1-cp313-cp313-win_amd64.whl (44.5 MB)\n",
+      "   ---------------------------------------- 0.0/44.5 MB ? eta -:--:--\n",
+      "   ------ --------------------------------- 7.6/44.5 MB 38.0 MB/s eta 0:00:01\n",
+      "   ------------ --------------------------- 13.9/44.5 MB 32.7 MB/s eta 0:00:01\n",
+      "   ----------------- ---------------------- 19.7/44.5 MB 31.5 MB/s eta 0:00:01\n",
+      "   ---------------------- ----------------- 25.4/44.5 MB 30.8 MB/s eta 0:00:01\n",
+      "   ---------------------------- ----------- 31.2/44.5 MB 29.9 MB/s eta 0:00:01\n",
+      "   -------------------------------- ------- 36.4/44.5 MB 29.5 MB/s eta 0:00:01\n",
+      "   ------------------------------------- -- 41.9/44.5 MB 28.9 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 44.5/44.5 MB 26.9 MB/s eta 0:00:00\n",
+      "Downloading threadpoolctl-3.5.0-py3-none-any.whl (18 kB)\n",
+      "Installing collected packages: threadpoolctl, numpy, joblib, scipy, scikit-learn\n",
+      "Successfully installed joblib-1.4.2 numpy-2.1.3 scikit-learn-1.5.2 scipy-1.14.1 threadpoolctl-3.5.0\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  WARNING: The scripts f2py.exe and numpy-config.exe are installed in 'c:\\Users\\dsadm\\AppData\\Local\\Programs\\Python\\Python313\\Scripts' which is not on PATH.\n",
+      "  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.\n",
+      "\n",
+      "[notice] A new release of pip is available: 24.2 -> 24.3.1\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install scikit-learn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pip install numpy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.cluster import KMeans"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dados = pd.DataFrame({\n",
+    "    'Símbolo':['AAPL','Google','MSFT',\n",
+    "               'AMZN','TSLA','FB'],\n",
+    "    'Preço':[150.12,2700.45,300.89,3200.10,700.78,\n",
+    "             350.40],\n",
+    "    'Volume de negociação':[3000000,1000000,2500000,\n",
+    "                            1200000,5000000,900000],\n",
+    "    'Capitalização de mercado':[2000000000000,18000000000000,\n",
+    "                                22000000000000,1700000000000,\n",
+    "                                75000000000000,9000000000000]\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plotando o boxplot\n",
+    "sns.boxplot(x= dados['Símbolo'],y=dados['Preço'])\n",
+    "plt.title('Analisando o preço das ações')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dados.describe() # descreve os dados de forma estatistica"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dados.info() # Exibe as informações da base de dados"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
  "metadata": {
   "kernelspec": {
    "display_name": "Python 3",
@@ -7,8 +145,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.12.5"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
