--- a/Somativa/codigo.ipynb
+++ b/Somativa/codigo.ipynb
@@ -2,20 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Importando as bibliotecas\n",
     "import pandas as pd\n",
-    "from sklearn.preprocessing import LabelEncoder, StandardScaler\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.svm import SVC\n",
-    "from sklearn.metrics import accuracy_score, confusion_matrix, classification_report, silhouette_score\n",
+    "from sklearn.preprocessing import  StandardScaler\n",
+    "from sklearn.metrics import silhouette_score\n",
     "from sklearn.cluster import KMeans\n",
     "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
-    "from mpl_toolkits.mplot3d import Axes3D"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -1118,7 +1115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1151,6 +1148,22 @@
     "ax.set_zlabel('Valor de Mercado')\n",
     "ax.legend()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#5) Qual a maior vantagem do aprendizado não supervisionado diante o aprendizado supervisionado ?\n",
+    "\n",
+    "#Resposta:\n",
+    "\n",
+    "# A principal vantagem do aprendizado não supervisionado é que ele não depende de dados rotulados, \n",
+    "# o que economiza tempo e esforço no preparo das informações. Ele é ótimo para explorar padrões escondidos e descobrir insights em dados desconhecidos, \n",
+    "# como grupos semelhantes ou comportamentos fora do padrão. É uma abordagem útil quando rotular os dados seria caro ou inviável. \n",
+    "# Além disso, pode ser um ótimo ponto de partida para entender os dados antes de aplicar métodos mais específicos."
    ]
   }
  ],
